--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:reset": "dropdb task_management --if-exists && npm run db:create && npm run db:schema"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/pg": "^8.15.5",
     "autoprefixer": "^10.4.21",
@@ -34,6 +35,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "dotenv": "^17.2.3",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
